@@ -23,7 +23,6 @@ import org.apache.lucene.search.SortField;
 import org.apache.lucene.util.PriorityQueue;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.util.NamedList;
-import org.apache.solr.search.SolrIndexSearcher;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -44,8 +43,6 @@ public class ShardDoc extends FieldDoc {
   public Object id;
     // this is currently the uniqueKeyField but
     // may be replaced with internal docid in a future release.
-
-  Float score;
 
   NamedList sortFieldValues;
   // sort field values for *all* docs in a particular shard.
